style.css
:root {
  --accent-color1: #447e89;
  --accent-color2: #73a7cf;
  --accent-color3: #857d77;
  --background-color1: #ffe9ca;
  --background-color2: #dbe4cf;
  --text-color1: #22214f;
}

* {
    margin: 0;
    padding: 0;
}

*, *::before, *::after {
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
  /* Set font size for easy rem calculations
  default document font size = 16px, 1rem = 16px, 100% = 16px
  (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px */
  font-size: 62.5%;
  scroll-behavior: smooth;
  scroll-padding-top: 75px;
}

/* 1200px / 16px = 75em */
@media (max-width: 75em) {
  html {
    font-size: 60%;
  }
}

/* 980px / 16px = 61.25em */
@media (max-width: 61.25em) {
  html {
    font-size: 58%;
  }
}

/* 460px / 16px = 28.75em */
@media (max-width: 28.75em) {
  html {
    font-size: 55%;
  }
}

body {
  font-family: Helvetica, sans-serif;
  font-size: 1.8rem;
  line-height: 1.4;
  color: var(--text-color1);
}

.container {
  max-width: 1000px;
  width: 100%;
  margin: 0 auto;
}

h1, h2, h3 {
  text-align: center;
}

h1 {
  font-size: 6rem;
  font-family: "Pacifico", serif;
  color: var(--accent-color2);
}

h2 {
  font-size: 3.6rem;
  color: var(--accent-color3);
}

h3 {
  font-size: 2.8rem;
  color: var(--accent-color1);
}

a {
  color: var(--accent-color1);
  font-weight: bold;
  text-decoration: none;
}

a:hover {
  transform: scale(1.2);
  text-decoration: underline;
}

section {
  margin-top: 20px;
}

.italic {
  text-align: center;
  font-style: italic;
  font-size: 1.5rem;
}

/* HEADER & NAVBAR STYLING */
header {
  position: fixed;
  top: 0;
  min-height: 75px;
  padding: 0 20px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
  background: linear-gradient(45deg, var(--background-color1), var(--background-color2))
}

@media (max-width: 600px) {
  header {
    flex-wrap: wrap;
  }
}

.logo {
  width: 60vw;
}

@media (max-width: 650px) {
  .logo {
    margin-top: 15px;
    width: 100%;
    position: relative;
  }
}

.logo > img {
  width: 100%;
  height: 100%;
  max-height: 20px;
  max-width: 300px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-left: 20px;
}

@media (max-width: 650px) {
  .logo > img {
    margin: 0 auto;
  }
}

@media (max-width: 650px) {
  nav {
    margin-top: 10px;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding: 0 50px;
  }
  nav li {
    padding-bottom: 5px;
  }
}

nav > ul {
  width: 35vw;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

nav li {
  list-style: none;
}

.nav-link {
  font-size: 1.8rem;
  font-weight: normal;
  text-decoration: none;
}

.nav-link:hover {
  font-weight: bold;
  text-decoration: none;
}

/* HERO STYLING */
#hero {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  height: 200px;
  margin-top: 60px;
}

#hero > h1 {
  margin-bottom: 20px;
  word-wrap: break-word;
}

@media (max-width: 650px) {
  #hero {
    margin-top: 120px;
  }
}

/* FAQ STYLING */

.faq-section {
  margin-top: 20px;
}

.faq-qa {
  margin-top: 10px;
}

.faq-question {
  font-size: 1.8rem;
  font-weight: bold;
}

/* CONTACT US STYLING */
#Contact {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  width: 100%;
  padding: 0 2rem;
}

.contact-links {
  display: flex;
  justify-content: center;
  width: 100%;
  max-width: 980px;
  margin-top: 2rem;
  flex-wrap: wrap;
}

.contact-item {
  font-size: 1.8rem;
}

.contact-item:nth-of-type(2) {
  margin: 0 5rem;
}

.contact-item i {
  font-weight: bold;
}

/* FOOTER STYLING */

footer {
  margin-top: 30px;
  padding: 20px;
  display: flex;
  justify-content: flex-end;
  font-size: 0.9em;
  background: linear-gradient(45deg, var(--background-color2), var(--background-color1));
}

footer li {
  list-style: none;
}

footer a {
  text-decoration: none;
}

footer a:hover {
  text-decoration: underline;
}

#attribution {
  font-size: 0.8em;
}

